--- a/Core.DALC/QOfreces.WPF/MantenedorUsuario.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorUsuario.xaml
@@ -13,26 +13,87 @@
         BorderThickness="1"
         Title="Mantenedor Usuario" Height="400" Width="600">
     <Grid>
-        <ComboBox x:Name="cbPerfil" HorizontalAlignment="Left" Margin="267,52,0,0" VerticalAlignment="Top" Width="160" TabIndex="11"/>
-        <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="267,19,0,0" VerticalAlignment="Top" Width="160" Controls:TextBoxHelper.Watermark="Fecha de nacimiento" TabIndex="10"/>
-        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu nombre" HorizontalAlignment="Left" Height="23" Margin="56,19,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="1"/>
-        <TextBox x:Name="txtApellido" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu apellido" HorizontalAlignment="Left" Height="23" Margin="56,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="2"/>
-        <TextBox x:Name="txtRut" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Rut 12345678-9" HorizontalAlignment="Left" Height="23" Margin="56,83,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="3"/>
-        <TextBox x:Name="txtEmail" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa Email" HorizontalAlignment="Left" Height="23" Margin="56,114,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="4"/>
-        <TextBox x:Name="txtCelular" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Numero de contacto" HorizontalAlignment="Left" Height="23" Margin="56,145,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="5"/>
-        <TextBox x:Name="txtPuntos" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad de puntos" HorizontalAlignment="Left" Height="23" Margin="56,176,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="6"/>
-        <TextBox x:Name="txtUsuario" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Nombre de usuario" HorizontalAlignment="Left" Height="23" Margin="56,207,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="7"/>
-        <PasswordBox x:Name="pbContraseña" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Contraseña" HorizontalAlignment="Left" Margin="56,238,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.579,-0.681" Width="164" TabIndex="8"/>
-        <PasswordBox x:Name="pbContraseña2" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Repita contraseña" HorizontalAlignment="Left" Margin="56,269,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.579,-0.681" Width="164" TabIndex="9"/>
-        <ComboBox x:Name="cbSucursal"  HorizontalAlignment="Left" Margin="267,83,0,0" VerticalAlignment="Top" Width="160" TabIndex="12"/>
-        <CheckBox x:Name="chActivar" IsChecked="True" Content="Usuario activo" HorizontalAlignment="Left" Margin="267,131,0,0" VerticalAlignment="Top" TabIndex="13"/>
-        <RadioButton x:Name="rbFem" IsChecked="True" Content="Femenino" GroupName="Sexo" HorizontalAlignment="Left" Margin="267,175,0,0" VerticalAlignment="Top" TabIndex="14"/>
-        <RadioButton x:Name="rbMas" Content="Masculino" GroupName="Sexo" HorizontalAlignment="Left" Margin="267,207,0,0" VerticalAlignment="Top" TabIndex="15"/>
-        <Button x:Name="btnAgregar" Content="Agregar usuario" HorizontalAlignment="Left" Margin="460,18,0,0" VerticalAlignment="Top" Width="120" Click="btnAgregar_Click" TabIndex="16"/>
-        <Button x:Name="btnModificar" Content="Modificar" HorizontalAlignment="Left" Margin="460,50,0,0" VerticalAlignment="Top" Width="120" TabIndex="17"/>
-        <Button x:Name="btnEliminar" Content="Eliminar" HorizontalAlignment="Left" Margin="460,83,0,0" VerticalAlignment="Top" Width="120" TabIndex="18" Click="btnEliminar_Click"/>
-        <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="506,327,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click" TabIndex="19"/>
-        <TextBox x:Name="txtEliminar" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Id a eliminar" HorizontalAlignment="Left" Height="23" Margin="460,128,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Controls:MetroTabControl x:Name="Mantenedor">
+            <Controls:MetroTabItem Header="Agregar" Margin="0,10,-86,-10" FontWeight="Medium">
+                <Grid Margin="0,12,0,-12">
 
+                    <ComboBox x:Name="cbPerfil" HorizontalAlignment="Left" Margin="267,52,0,0" VerticalAlignment="Top" Width="160" TabIndex="11"/>
+                    <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="267,19,0,0" VerticalAlignment="Top" Width="160" Controls:TextBoxHelper.Watermark="Fecha de nacimiento" TabIndex="10"/>
+                    <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu nombre" HorizontalAlignment="Left" Height="23" Margin="56,19,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="1"/>
+                    <TextBox x:Name="txtApellido" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu apellido" HorizontalAlignment="Left" Height="23" Margin="56,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="2"/>
+                    <TextBox x:Name="txtRut" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Rut 12345678-9" HorizontalAlignment="Left" Height="23" Margin="56,83,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="3"/>
+                    <TextBox x:Name="txtEmail" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa Email" HorizontalAlignment="Left" Height="23" Margin="56,114,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="4"/>
+                    <TextBox x:Name="txtCelular" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Numero de contacto" HorizontalAlignment="Left" Height="23" Margin="56,145,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="5"/>
+                    <TextBox x:Name="txtPuntos" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad de puntos" HorizontalAlignment="Left" Height="23" Margin="56,176,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="6"/>
+                    <TextBox x:Name="txtUsuario" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Nombre de usuario" HorizontalAlignment="Left" Height="23" Margin="56,207,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="7"/>
+                    <PasswordBox x:Name="pbContraseña" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Contraseña" HorizontalAlignment="Left" Margin="56,238,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.579,-0.681" Width="164" TabIndex="8"/>
+                    <PasswordBox x:Name="pbContraseña2" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Repita contraseña" HorizontalAlignment="Left" Margin="56,269,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.579,-0.681" Width="164" TabIndex="9"/>
+                    <ComboBox x:Name="cbSucursal"  HorizontalAlignment="Left" Margin="267,83,0,0" VerticalAlignment="Top" Width="160" TabIndex="12"/>
+                    <CheckBox x:Name="chActivar" IsChecked="True" Content="Usuario activo" HorizontalAlignment="Left" Margin="267,131,0,0" VerticalAlignment="Top" TabIndex="13"/>
+                    <RadioButton x:Name="rbFem" IsChecked="True" Content="Femenino" GroupName="Sexo" HorizontalAlignment="Left" Margin="267,175,0,0" VerticalAlignment="Top" TabIndex="14"/>
+                    <RadioButton x:Name="rbMas" Content="Masculino" GroupName="Sexo" HorizontalAlignment="Left" Margin="267,207,0,0" VerticalAlignment="Top" TabIndex="15"/>
+                    <Button x:Name="btnAgregar" Content="Agregar usuario" HorizontalAlignment="Left" Margin="460,18,0,0" VerticalAlignment="Top" Width="120" Click="btnAgregar_Click" TabIndex="16"/>
+                    <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="506,327,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click" TabIndex="19"/>
+                </Grid>
+            </Controls:MetroTabItem>
+            <Controls:MetroTabItem Header="Modificar" Margin="89,10,-144,-10">
+                <Grid Margin="0,12,-1,5">
+                    <Button x:Name="btnModificar" Content="Modificar" HorizontalAlignment="Left" Margin="415,276,0,0" VerticalAlignment="Top" Width="75"/>
+                    <Button x:Name="btnSalirM" Content="salir" HorizontalAlignment="Left" Margin="506,276,0,0" VerticalAlignment="Top" Width="75"/>
+                    <TextBox x:Name="txtBuscarM" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Buscar Usuario" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Button x:Name="btnListarM" Content="Listar" HorizontalAlignment="Left" Margin="135,10,0,0" VerticalAlignment="Top" Width="75" Click="btnListarM_Click"/>
+                    <DataGrid x:Name="dgUsuarioM" CanUserAddRows="False" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top" Height="161" Width="200" SelectionChanged="dgUsuarioM_SelectionChanged">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn x:Name="dgcId" Header="ID" Binding="{Binding Path=IdUsuario}"/>
+                            <DataGridTextColumn x:Name="dgcNom" Header="Nombre" Binding="{Binding Path=Nombre}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <ComboBox x:Name="cbPerfilM" HorizontalAlignment="Left" Margin="421,73,0,0" VerticalAlignment="Top" Width="160" TabIndex="11"/>
+                    <DatePicker x:Name="dpFechaM" HorizontalAlignment="Left" Margin="421,42,0,0" VerticalAlignment="Top" Width="160" Controls:TextBoxHelper.Watermark="Fecha de nacimiento" TabIndex="10"/>
+                    <TextBox x:Name="txtNombreM" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu nombre" HorizontalAlignment="Left" Height="23" Margin="238,42,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="1"/>
+                    <TextBox x:Name="txtApellidoM" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu apellido" HorizontalAlignment="Left" Height="23" Margin="238,73,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="2"/>
+                    <TextBox x:Name="txtRutM" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Rut 12345678-9" HorizontalAlignment="Left" Height="23" Margin="238,104,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="3"/>
+                    <TextBox x:Name="txtEmailM" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa Email" HorizontalAlignment="Left" Height="23" Margin="238,135,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="4"/>
+                    <TextBox x:Name="txtCelularM" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Numero de contacto" HorizontalAlignment="Left" Height="23" Margin="238,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="5"/>
+                    <TextBox x:Name="txtPuntosM" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad de puntos" HorizontalAlignment="Left" Height="23" Margin="238,197,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="6"/>
+                    <TextBox x:Name="txtUsuarioM" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Nombre de usuario" HorizontalAlignment="Left" Height="23" Margin="238,228,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="7"/>
+                    <PasswordBox x:Name="pbContraseñaM" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Contraseña" HorizontalAlignment="Left" Margin="417,197,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.579,-0.681" Width="164" TabIndex="8"/>
+                    <PasswordBox x:Name="pbContraseña2M" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Repita contraseña" HorizontalAlignment="Left" Margin="417,228,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.579,-0.681" Width="164" TabIndex="9"/>
+                    <ComboBox x:Name="cbSucursalM"  HorizontalAlignment="Left" Margin="421,104,0,0" VerticalAlignment="Top" Width="160" TabIndex="12"/>
+                    <CheckBox x:Name="chActivarM" IsChecked="True" Content="Usuario activo" HorizontalAlignment="Left" Margin="482,135,0,0" VerticalAlignment="Top" TabIndex="13"/>
+                    <RadioButton x:Name="rbFemM" IsChecked="True" Content="Femenino" GroupName="Sexo" HorizontalAlignment="Left" Margin="505,158,0,0" VerticalAlignment="Top" TabIndex="14"/>
+                    <RadioButton x:Name="rbMasM" Content="Masculino" GroupName="Sexo" HorizontalAlignment="Left" Margin="422,158,0,0" VerticalAlignment="Top" TabIndex="15"/>
+                </Grid>
+            </Controls:MetroTabItem>
+
+            <Controls:MetroTabItem Header="Eliminar" Margin="149,10,-243,-10">
+                <Grid Margin="0,12,0,-12">
+                    <Button x:Name="btnEliminar"  Content="eliminar" HorizontalAlignment="Left" Margin="415,276,0,0" VerticalAlignment="Top" Width="75" Click="btnEliminar_Click"/>
+                    <Button x:Name="btnSalirE" Content="salir" HorizontalAlignment="Left" Margin="506,276,0,0" VerticalAlignment="Top" Width="75" Click="btnSalirE_Click"/>
+                    <TextBox x:Name="txtBuscarE" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Buscar Usuario" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Button x:Name="btnListarE" Content="Listar" HorizontalAlignment="Left" Margin="135,10,0,0" VerticalAlignment="Top" Width="75" Click="btnListarE_Click"/>
+                    <DataGrid x:Name="dgUsuarioE" CanUserAddRows="False" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top" Height="161" Width="200" SelectionChanged="dgUsuarioE_SelectionChanged">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn x:Name="dgcIdE" Header="ID" Binding="{Binding Path=IdUsuario}"/>
+                            <DataGridTextColumn x:Name="dgcNomE" Header="Nombre" Binding="{Binding Path=Nombre}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <ComboBox x:Name="cbPerfilE" IsEnabled="False" HorizontalAlignment="Left" Margin="421,73,0,0" VerticalAlignment="Top" Width="160" TabIndex="11"/>
+                    <DatePicker x:Name="dpFechaE" IsEnabled="False" HorizontalAlignment="Left" Margin="421,42,0,0" VerticalAlignment="Top" Width="160" Controls:TextBoxHelper.Watermark="Fecha de nacimiento" TabIndex="10"/>
+                    <TextBox x:Name="txtNombreE" IsReadOnly="True" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu nombre" HorizontalAlignment="Left" Height="23" Margin="238,42,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="1"/>
+                    <TextBox x:Name="txtApellidoE" IsReadOnly="True" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu apellido" HorizontalAlignment="Left" Height="23" Margin="238,73,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="2"/>
+                    <TextBox x:Name="txtRutE" IsReadOnly="True" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Rut 12345678-9" HorizontalAlignment="Left" Height="23" Margin="238,104,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="3"/>
+                    <TextBox x:Name="txtEmailE" IsReadOnly="True" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa Email" HorizontalAlignment="Left" Height="23" Margin="238,135,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="4"/>
+                    <TextBox x:Name="txtCelularE" IsReadOnly="True" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Numero de contacto" HorizontalAlignment="Left" Height="23" Margin="238,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="5"/>
+                    <TextBox x:Name="txtPuntosE" IsReadOnly="True" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad de puntos" HorizontalAlignment="Left" Height="23" Margin="238,197,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="6"/>
+                    <TextBox x:Name="txtUsuarioE" IsReadOnly="True" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Nombre de usuario" HorizontalAlignment="Left" Height="23" Margin="238,228,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" TabIndex="7"/>
+                    <ComboBox x:Name="cbSucursalE" IsEnabled="False" HorizontalAlignment="Left" Margin="421,104,0,0" VerticalAlignment="Top" Width="160" TabIndex="12"/>
+                    <CheckBox x:Name="chActivarE" IsEnabled="False" IsChecked="True" Content="Usuario activo" HorizontalAlignment="Left" Margin="482,135,0,0" VerticalAlignment="Top" TabIndex="13"/>
+                    <RadioButton x:Name="rbFemE" IsEnabled="False" IsChecked="True" Content="Femenino" GroupName="Sexo" HorizontalAlignment="Left" Margin="505,158,0,0" VerticalAlignment="Top" TabIndex="14"/>
+                    <RadioButton x:Name="rbMasE" IsEnabled="False" Content="Masculino" GroupName="Sexo" HorizontalAlignment="Left" Margin="422,158,0,0" VerticalAlignment="Top" TabIndex="15"/>
+                </Grid>
+            </Controls:MetroTabItem>
+
+        </Controls:MetroTabControl>
     </Grid>
 </Controls:MetroWindow>
