--- a/Core.DALC/QOfreces.WPF/MantenedorRetail.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorRetail.xaml
@@ -12,14 +12,14 @@
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
         Title="Mantenedor Retail" Height="400" Width="600" Background="Gainsboro">
-    <Grid Margin="10,17,1,0">
+    <Grid Margin="10,10,1,7">
         <TextBox x:Name="txtRut" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese rut" HorizontalAlignment="Left" Height="23" Margin="32,53,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="175"/>
         <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese nombre" HorizontalAlignment="Left" Height="23" Margin="32,92,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="175"/>
         <TextBox x:Name="txtRazonSocial" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese razon social" HorizontalAlignment="Left" Height="23" Margin="32,135,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="175"/>
         <TextBox x:Name="txtTelefono" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese telefono" HorizontalAlignment="Left" Height="23" Margin="32,181,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="175"/>
         <TextBox x:Name="txtEmail" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese email" HorizontalAlignment="Left" Height="23" Margin="32,229,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="175"/>
         <TextBox x:Name="txtDireccion" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese direccion" HorizontalAlignment="Left" Height="23" Margin="32,274,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="175"/>
-        <ComboBox x:Name="cbRegion" HorizontalAlignment="Left" Margin="226,78,0,0" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="cbRegion" HorizontalAlignment="Left" Margin="226,78,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbRegion_SelectionChanged"/>
         <ComboBox x:Name="cbComuna" HorizontalAlignment="Left" Margin="226,135,0,0" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="label" Content="Region" HorizontalAlignment="Left" Margin="226,47,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.318,0.1"/>
         <Label x:Name="label1" Content="Comuna" HorizontalAlignment="Left" Margin="226,104,0,0" VerticalAlignment="Top"/>
@@ -32,7 +32,7 @@
         <Button x:Name="btnListar" Visibility="Hidden" Content="Listar" HorizontalAlignment="Left" Margin="494,55,0,0" VerticalAlignment="Top" Width="75" Click="btnListar_Click"/>
         <TextBox x:Name="txtListar" Visibility="Hidden" HorizontalAlignment="Left" Height="23" Margin="369,57,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="494,313,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
-        <Button x:Name="btnEjecutar" Content="Agregar" HorizontalAlignment="Left" Margin="398,313,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnEjecutar" Content="Agregar" HorizontalAlignment="Left" Margin="398,313,0,0" VerticalAlignment="Top" Width="75" Click="btnEjecutar_Click"/>
         <Controls:Tile x:Name="tiAgregar" Height="Auto" Margin="32,10,494,308" Width="Auto" Title="Agregar" TitleFontSize="10" Click="tiAgregar_Click"/>
         <Controls:Tile x:Name="tiModificar" Height="Auto" Margin="211,10,306,308" Width="Auto" Title="Modificar" TitleFontSize="10" Click="tiModificar_Click"/>
         <Controls:Tile x:Name="tiEliminar" Height="Auto" Margin="385,10,133,308" Width="Auto" Title="Eliminar" TitleFontSize="10" RenderTransformOrigin="2.377,0.438" Click="tiEliminar_Click"/>
