--- a/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
@@ -34,16 +34,18 @@
         <Label x:Name="lblPrueba_Copy3" Content="" HorizontalAlignment="Left" Margin="268,247,0,0" VerticalAlignment="Top" Height="26" Width="16"/>
         <Label x:Name="lblPrueba_Copy4" Content="" HorizontalAlignment="Left" Margin="527,108,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
         <Label x:Name="lblPrueba_Copy5" Content="" HorizontalAlignment="Left" Margin="527,136,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <Label x:Name="label_Copy5" Content="Rubro:" HorizontalAlignment="Left" Margin="128,116,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label_Copy5" Content="Rubro:" HorizontalAlignment="Left" Margin="128,154,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblPrueba_Copy6" Content="" HorizontalAlignment="Left" Margin="527,144,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
         <Label x:Name="lblPrueba_Copy7" Content="" HorizontalAlignment="Left" Margin="527,172,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <Label x:Name="label_Copy6" Content="Sucursal:" HorizontalAlignment="Left" Margin="117,147,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="cbRubro" HorizontalAlignment="Left" Margin="178,118,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="4"/>
-        <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="178,151,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="5"/>
+        <Label x:Name="label_Copy6" Content="Sucursal:" HorizontalAlignment="Left" Margin="117,180,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cbRubro" HorizontalAlignment="Left" Margin="178,149,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="4"/>
+        <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="178,180,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="5"/>
         <TextBox x:Name="txtBuscar" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Busqueda" HorizontalAlignment="Left" Height="23" Margin="550,28,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="169" BorderBrush="Black"/>
         <Button x:Name="btnAgregar" Content="Agregar" HorizontalAlignment="Left" Margin="128,246,0,0" VerticalAlignment="Top" Width="75" Click="btnAgregar_Click" BorderBrush="Black" TabIndex="6"/>
         <Button x:Name="btnModificar" Content="Modificar" HorizontalAlignment="Left" Margin="223,245,0,0" VerticalAlignment="Top" Width="75" BorderBrush="Black" Click="btnModificar_Click"/>
         <Button x:Name="btnEliminar" Content="Eliminar" HorizontalAlignment="Left" Margin="326,245,0,0" VerticalAlignment="Top" Width="75" BorderBrush="Black" Click="btnEliminar_Click"/>
         <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="617,246,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
+        <TextBox x:Name="txtCod" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese descripcion" HorizontalAlignment="Left" Height="23" Margin="178,118,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="3" RenderTransformOrigin="0.44,1.96"/>
+        <Label x:Name="label_Copy2" Content="Codigo interno:" HorizontalAlignment="Left" Margin="81,118,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Controls:MetroWindow>
