--- a/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
@@ -15,7 +15,7 @@
     <Grid x:Name="col_1">
         <Button x:Name="btnListarProd" Visibility="Hidden" Content="Listar Productos" HorizontalAlignment="Left" Margin="477,80,0,0" VerticalAlignment="Top" Width="103" Height="22" Click="btnListarProd_Click" BorderBrush="Black"/>
         <Label x:Name="lblPrueba" Content="" HorizontalAlignment="Left" Margin="220,186,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <DataGrid x:Name="dgProd" Visibility="Hidden" CanUserAddRows="False" HorizontalAlignment="Left" Margin="358,107,0,0" VerticalAlignment="Top" Height="161" Width="222">
+        <DataGrid x:Name="dgProd" Visibility="Hidden" CanUserAddRows="False" HorizontalAlignment="Left" Margin="358,107,0,0" VerticalAlignment="Top" Height="161" Width="222" SelectionChanged="dgProd_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="dgcId" Header="ID" Binding="{Binding Path=IdProducto}"/>
                 <DataGridTextColumn x:Name="dgcNom" Header="Nombre Producto" Binding="{Binding Path=Nombre}"/>
@@ -36,9 +36,7 @@
         <Label x:Name="label_Copy5" Content="Rubro:" HorizontalAlignment="Left" Margin="57,203,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblPrueba_Copy6" Content="" HorizontalAlignment="Left" Margin="527,182,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
         <Label x:Name="lblPrueba_Copy7" Content="" HorizontalAlignment="Left" Margin="527,210,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <Label x:Name="label_Copy6" Content="Sucursal:" HorizontalAlignment="Left" Margin="46,234,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="cbRubro" HorizontalAlignment="Left" Margin="107,203,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="4"/>
-        <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="107,234,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="5"/>
         <TextBox x:Name="txtBuscar" Visibility="Hidden" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Busqueda" HorizontalAlignment="Left" Height="23" Margin="358,79,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="105" BorderBrush="Black"/>
         <Button x:Name="btnEjecutar" Content="Agregar" HorizontalAlignment="Left" Margin="410,330,0,0" VerticalAlignment="Top" Width="75" Click="btnEjecutar_Click" BorderBrush="Black" TabIndex="6"/>
         <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="505,330,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click" BorderBrush="Black" Foreground="Black"/>
